added footer and Contact Me area.

--- a/myCV.html
+++ b/myCV.html
@@ -36,6 +36,53 @@
                     <li>Onboarding & Training</li>
                     <li>Employee engagements</li>
                 </ul>
+                <h3>Tools</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Tool</th>
+                            <th>Description</th>
+                            <th>Proficiency</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Visual Studio Code</td>
+                            <td>a code editor and integrated development environment (IDE) developed by Microsoft.</td>
+                            <td>Intermediate</td>
+                        </tr>
+                        <tr>
+                            <td>Git</td>
+                            <td>Git is a distributed version-control system for tracking changes in source code during software development.</td>
+                            <td>Intermediate</td>
+                        </tr>
+                        <tr>
+                            <td>Microsoft Excel</td>
+                            <td>Microsoft Excel is a spreadsheet developed by Microsoft for Windows, macOS, Android, and iOS.</td>
+                            <td>Advanced</td>
+                        </tr>
+                        <tr>
+                            <td>Ubuntu</td>
+                            <td>Ubuntu is a Linux distribution based on Debian and composed mostly of free and open-source software.</td>
+                            <td>Intermediate</td>
+                        </tr>
+                        <tr>
+                            <td>Linux</td>
+                            <td>Linux is a family of open-source Unix-like operating systems based on the Linux kernel, an operating system kernel first released on September 17, 1991, by Linus Torvalds.</td>
+                            <td>Intermediate</td>
+                        </tr>
+                        <tr>
+                            <td>JavaScript</td>
+                            <td>JavaScript is a programming language that conforms to the ECMAScript specification.</td>
+                            <td>Beginner</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section>
+                <h3><b><u>Projects</u></b></h3>
+                <p>
+                    <em>Stay tuned! Exciting project are on the way as I progress through the Springboard course.</p></em>
             </section>
             <section>
                 <h2><u>EDUCATION</u></h2>
@@ -105,49 +152,45 @@
                             seamlessly into their roles.
                         </li>
                 </ul>
-                <h3>Tools</h3>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Tool</th>
-                            <th>Description</th>
-                            <th>Proficiency</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Visual Studio Code</td>
-                            <td>a code editor and integrated development environment (IDE) developed by Microsoft.</td>
-                            <td>Intermediate</td>
-                        </tr>
-                        <tr>
-                            <td>Git</td>
-                            <td>Git is a distributed version-control system for tracking changes in source code during software development.</td>
-                            <td>Intermediate</td>
-                        </tr>
-                        <tr>
-                            <td>Microsoft Excel</td>
-                            <td>Microsoft Excel is a spreadsheet developed by Microsoft for Windows, macOS, Android, and iOS.</td>
-                            <td>Advanced</td>
-                        </tr>
-                        <tr>
-                            <td>Ubuntu</td>
-                            <td>Ubuntu is a Linux distribution based on Debian and composed mostly of free and open-source software.</td>
-                            <td>Intermediate</td>
-                        </tr>
-                        <tr>
-                            <td>Linux</td>
-                            <td>Linux is a family of open-source Unix-like operating systems based on the Linux kernel, an operating system kernel first released on September 17, 1991, by Linus Torvalds.</td>
-                            <td>Intermediate</td>
-                        </tr>
-                        <tr>
-                            <td>JavaScript</td>
-                            <td>JavaScript is a programming language that conforms to the ECMAScript specification.</td>
-                            <td>Beginner</td>
-                        </tr>
-                    </tbody>
-                </table>
             </section>
-        </main>   
+        </main>
+        <footer>
+            <section>
+            <h3>Contact Me</h3>
+            <form>
+                <div>Name: <input type="text" name="name" placeholder="First Last"><br></div>
+                <div>Email: <input type="email" name="email"  placeholder="first.last@exmaple.com"><br></div>
+                <div>Organization: <input placeholder="workplace..."><br></div>
+                <div>Role: <input><br></div>
+                <div>
+                <label for="reason">Reason for Contact:</label>
+                <select id="reason" name="reason">
+                    <option value="Joboffer">Job Offer</option>
+                    <option value="Meeting">Meeting</option>
+                    <option value="Networking">Networking</option>
+                    <option value="Question">Question</option>
+                    <option value="Coding">Coding</option>
+                </select>
+            </div>
+            <fieldset>
+                <legend id="scheduling"> date & time? </legend>
+                <input type="datetime-local" id="scheduling" name="birthdaytime">
+            </fieldset>
+            <div>
+                <label for="message">Message:</label>
+                <input type="text" id="message" name="message" placeholder="Type your message here...">
+            </div>
+            <button type="submit">Submit</button> <button type="reset">Reset</button>
+            </form>
+            </section>
+            <section>
+                <p>Le's connect and discuss more about software engineering! Find me on:</p>
+                <ul>
+                <li><a href="https://www.linkedin.com/in/loschins/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/Ianloschins" target="_blank">GitHub</a></li>
+                </ul>
+            </section>
+            <p>&copy; 2025 Ian Loschinskey</p>
+        </footer>   
 </body>
 </html>
