Project 1 - Exercise 2.3: Polishing the Layouts of Your Digital CV

--- a/myCV.html
+++ b/myCV.html
@@ -19,7 +19,7 @@
             <p>Email: ian.loschinskey@gmail.com</p>
             <p>Linkedin: <a href="https://www.linkedin.com/in/loschins/" target="_blank">https://www.linkedin.com/in/loschins/</a></p>
             </div>
-            <section class="skills-section"><h1><b><u>Skills</u></b></h1>
+            <section class="skills-section">
                 <h4 class="technical-skills"><b><u>Technical Skills:</u></b></h4>
                 <ul class="technical-skills">
                     <li>Front-End & Back-End</li>
